@@ -98,7 +98,6 @@ import java.util.concurrent.ThreadPoolExecutor;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import junit.framework.AssertionFailedError;
 import org.apache.lucene.analysis.Analyzer;
 import org.apache.lucene.document.Document;
@@ -133,14 +132,15 @@ import org.apache.lucene.index.MergeScheduler;
 import org.apache.lucene.index.MultiBits;
 import org.apache.lucene.index.MultiDocValues;
 import org.apache.lucene.index.MultiTerms;
+import org.apache.lucene.index.NoDeletionPolicy;
 import org.apache.lucene.index.NumericDocValues;
 import org.apache.lucene.index.ParallelCompositeReader;
 import org.apache.lucene.index.ParallelLeafReader;
 import org.apache.lucene.index.PointValues;
 import org.apache.lucene.index.PostingsEnum;
-import org.apache.lucene.index.QueryTimeout;
 import org.apache.lucene.index.SerialMergeScheduler;
 import org.apache.lucene.index.SimpleMergedSegmentWarmer;
+import org.apache.lucene.index.SnapshotDeletionPolicy;
 import org.apache.lucene.index.SortedDocValues;
 import org.apache.lucene.index.SortedNumericDocValues;
 import org.apache.lucene.index.SortedSetDocValues;
@@ -476,7 +476,12 @@ public abstract class LuceneTestCase extends Assert {
    * of iterations to scale your tests (for nightly builds).
    */
   public static final int RANDOM_MULTIPLIER =
-      systemPropertyAsInt("tests.multiplier", TEST_NIGHTLY ? 2 : 1);
+      systemPropertyAsInt("tests.multiplier", defaultRandomMultiplier());
+
+  /** Compute the default value of the random multiplier (based on {@link #TEST_NIGHTLY}). */
+  static int defaultRandomMultiplier() {
+    return TEST_NIGHTLY ? 2 : 1;
+  }
 
   /** Leave temporary files on disk, even on successful runs. */
   public static final boolean LEAVE_TEMPORARY;
@@ -485,10 +490,9 @@ public abstract class LuceneTestCase extends Assert {
     boolean defaultValue = false;
     for (String property :
         Arrays.asList(
-            "tests.leaveTemporary" /* ANT tasks's (junit4) flag. */,
+            "tests.leaveTemporary" /* ANT tasks' (junit4) flag. */,
             "tests.leavetemporary" /* lowercase */,
-            "tests.leavetmpdir" /* default */,
-            "solr.test.leavetmpdir" /* Solr's legacy */)) {
+            "tests.leavetmpdir" /* default */)) {
       defaultValue |= systemPropertyAsBoolean(property, false);
     }
     LEAVE_TEMPORARY = defaultValue;
@@ -559,7 +563,7 @@ public abstract class LuceneTestCase extends Assert {
   protected static TestRuleMarkFailure suiteFailureMarker;
 
   /** Temporary files cleanup rule. */
-  private static TestRuleTemporaryFilesCleanup tempFilesCleanupRule;
+  private static final TestRuleTemporaryFilesCleanup tempFilesCleanupRule;
 
   /**
    * Ignore tests after hitting a designated number of initial failures. This is truly a "static"
@@ -652,13 +656,7 @@ public abstract class LuceneTestCase extends Assert {
 
                     // We reset the default locale and timezone; these properties change as a
                     // side-effect
-                    "user.language",
-                    "user.timezone",
-
-                    // TODO: these should, ideally, be moved to Solr's base class.
-                    "solr.directoryFactory",
-                    "solr.solr.home",
-                    "solr.data.dir"))
+                    "user.language", "user.timezone"))
             .around(classEnvRule = new TestRuleSetupAndRestoreClassEnv());
   }
 
@@ -667,13 +665,14 @@ public abstract class LuceneTestCase extends Assert {
   // -----------------------------------------------------------------
 
   /** Enforces {@link #setUp()} and {@link #tearDown()} calls are chained. */
-  private TestRuleSetupTeardownChained parentChainCallRule = new TestRuleSetupTeardownChained();
+  private final TestRuleSetupTeardownChained parentChainCallRule =
+      new TestRuleSetupTeardownChained();
 
   /** Save test thread and name. */
-  private TestRuleThreadAndTestName threadAndTestNameRule = new TestRuleThreadAndTestName();
+  private final TestRuleThreadAndTestName threadAndTestNameRule = new TestRuleThreadAndTestName();
 
   /** Taint suite result with individual test failures. */
-  private TestRuleMarkFailure testFailureMarker = new TestRuleMarkFailure(suiteFailureMarker);
+  private final TestRuleMarkFailure testFailureMarker = new TestRuleMarkFailure(suiteFailureMarker);
 
   /**
    * This controls how individual test rules are nested. It is important that _all_ rules declared
@@ -687,13 +686,13 @@ public abstract class LuceneTestCase extends Assert {
           .around(new TestRuleSetupAndRestoreInstanceEnv())
           .around(parentChainCallRule);
 
-  private static final Map<String, FieldType> fieldToType = new HashMap<String, FieldType>();
+  private static final Map<String, FieldType> fieldToType = new HashMap<>();
 
   enum LiveIWCFlushMode {
     BY_RAM,
     BY_DOCS,
     EITHER
-  };
+  }
 
   /** Set by TestRuleSetupAndRestoreClassEnv */
   static LiveIWCFlushMode liveIWCFlushMode;
@@ -923,6 +922,13 @@ public abstract class LuceneTestCase extends Assert {
   public static void dumpArray(String label, Object[] objs, PrintStream stream) {
     Iterator<?> iter = (null == objs) ? null : Arrays.asList(objs).iterator();
     dumpIterator(label, iter, stream);
+  }
+
+  /** create a new index writer config with a snapshot deletion policy */
+  public static IndexWriterConfig newSnapshotIndexWriterConfig(Analyzer analyzer) {
+    IndexWriterConfig c = newIndexWriterConfig(analyzer);
+    c.setIndexDeletionPolicy(new SnapshotDeletionPolicy(NoDeletionPolicy.INSTANCE));
+    return c;
   }
 
   /** create a new index writer config with random defaults */
@@ -1263,7 +1269,7 @@ public abstract class LuceneTestCase extends Assert {
         }
       } else {
         // but just in case of something ridiculous...
-        diff.append(current.toString());
+        diff.append(current);
       }
 
       // its possible to be empty, if we "change" a value to what it had before.
@@ -1387,8 +1393,7 @@ public abstract class LuceneTestCase extends Assert {
       }
 
       Directory fsdir = newFSDirectoryImpl(clazz, f, lf);
-      BaseDirectoryWrapper wrapped = wrapDirectory(random(), fsdir, bare, true);
-      return wrapped;
+      return wrapDirectory(random(), fsdir, bare, true);
     } catch (Exception e) {
       Rethrow.rethrow(e);
       throw null; // dummy to prevent compiler failure
@@ -1887,7 +1892,7 @@ public abstract class LuceneTestCase extends Assert {
             threads,
             0L,
             TimeUnit.MILLISECONDS,
-            new LinkedBlockingQueue<Runnable>(),
+            new LinkedBlockingQueue<>(),
             new NamedThreadFactory("LuceneTestCase"));
     // uncomment to intensify LUCENE-3840
     // executor.prestartAllCoreThreads();
@@ -2007,13 +2012,7 @@ public abstract class LuceneTestCase extends Assert {
       ret.setSimilarity(classEnvRule.similarity);
       ret.setQueryCachingPolicy(MAYBE_CACHE_POLICY);
       if (random().nextBoolean()) {
-        ret.setTimeout(
-            new QueryTimeout() {
-              @Override
-              public boolean shouldExit() {
-                return false;
-              }
-            });
+        ret.setTimeout(() -> false);
       }
       return ret;
     }
@@ -2333,7 +2332,7 @@ public abstract class LuceneTestCase extends Assert {
     int numPasses = 0;
     while (numPasses < 10 && tests.size() < numTests) {
       leftEnum = leftTerms.iterator();
-      BytesRef term = null;
+      BytesRef term;
       while ((term = leftEnum.next()) != null) {
         int code = random.nextInt(10);
         if (code == 0) {
@@ -2439,17 +2438,11 @@ public abstract class LuceneTestCase extends Assert {
       // in whatever way it wants (e.g. maybe it packs related fields together or something)
       // To fix this, we sort the fields in both documents by name, but
       // we still assume that all instances with same name are in order:
-      Comparator<IndexableField> comp =
-          new Comparator<IndexableField>() {
-            @Override
-            public int compare(IndexableField arg0, IndexableField arg1) {
-              return arg0.name().compareTo(arg1.name());
-            }
-          };
+      Comparator<IndexableField> comp = Comparator.comparing(IndexableField::name);
       List<IndexableField> leftFields = new ArrayList<>(leftDoc.getFields());
       List<IndexableField> rightFields = new ArrayList<>(rightDoc.getFields());
-      Collections.sort(leftFields, comp);
-      Collections.sort(rightFields, comp);
+      leftFields.sort(comp);
+      rightFields.sort(comp);
 
       Iterator<IndexableField> leftIterator = leftFields.iterator();
       Iterator<IndexableField> rightIterator = rightFields.iterator();
@@ -2717,7 +2710,7 @@ public abstract class LuceneTestCase extends Assert {
             public void visit(int docID, byte[] packedValue) throws IOException {
               int topDocID = ctx.docBase + docID;
               if (docValues.containsKey(topDocID) == false) {
-                docValues.put(topDocID, new HashSet<BytesRef>());
+                docValues.put(topDocID, new HashSet<>());
               }
               docValues.get(topDocID).add(new BytesRef(packedValue.clone()));
             }
@@ -2871,8 +2864,7 @@ public abstract class LuceneTestCase extends Assert {
       }
     }
 
-    List<String> exceptionTypes =
-        expectedTypes.stream().map(c -> c.getSimpleName()).collect(Collectors.toList());
+    List<String> exceptionTypes = expectedTypes.stream().map(Class::getSimpleName).toList();
 
     if (thrown != null) {
       AssertionFailedError assertion =
@@ -2940,12 +2932,11 @@ public abstract class LuceneTestCase extends Assert {
       LinkedHashMap<Class<? extends TO>, List<Class<? extends TW>>> expectedOuterToWrappedTypes,
       ThrowingRunnable runnable) {
     final List<Class<? extends TO>> outerClasses =
-        expectedOuterToWrappedTypes.keySet().stream().collect(Collectors.toList());
+        new ArrayList<>(expectedOuterToWrappedTypes.keySet());
     final Throwable thrown = _expectThrows(outerClasses, runnable);
 
     if (null == thrown) {
-      List<String> outerTypes =
-          outerClasses.stream().map(Class::getSimpleName).collect(Collectors.toList());
+      List<String> outerTypes = outerClasses.stream().map(Class::getSimpleName).toList();
       throw new AssertionFailedError(
           "Expected any of the following outer exception types: "
               + outerTypes
@@ -2966,7 +2957,7 @@ public abstract class LuceneTestCase extends Assert {
             }
           }
           List<String> wrappedTypes =
-              expectedWrappedTypes.stream().map(Class::getSimpleName).collect(Collectors.toList());
+              expectedWrappedTypes.stream().map(Class::getSimpleName).toList();
           AssertionFailedError assertion =
               new AssertionFailedError(
                   "Unexpected wrapped exception type, expected one of "
@@ -2978,8 +2969,7 @@ public abstract class LuceneTestCase extends Assert {
         }
       }
     }
-    List<String> outerTypes =
-        outerClasses.stream().map(Class::getSimpleName).collect(Collectors.toList());
+    List<String> outerTypes = outerClasses.stream().map(Class::getSimpleName).toList();
     AssertionFailedError assertion =
         new AssertionFailedError(
             "Unexpected outer exception type, expected one of "
